adding ability to set tweeter profiles on users

--- a/views/form_parts/errors.ejs
+++ b/views/form_parts/errors.ejs
@@ -1,7 +1,7 @@
 <%if(typeof errors !='undefined'){%>
                <ul class="error_list">
                    <%for(var e in errors){%>
-                       <li><label><%=e%></label> <%=rrors[e]%></li>
+                       <li><label><%=e%></label> <%=errors[e]%></li>
                    <%}%>
                </ul>
            <%}%>
