--- a/views/users/users_show.ejs
+++ b/views/users/users_show.ejs
@@ -29,6 +29,12 @@
                         <%}%>
                 <%}%>
             </li>
+            <li>
+                <label>Tweeter Profile: </label>
+                <%if(tweeter){%>
+                    <%=tweeter.screen_name%>
+                <%}%>
+            </li>
         </ul>
     </div>
 </div>
